<?xml version="1.0"?>
<package>
  <name>lebai_driver</name>
  <version>0.0.1</version>
  <description>The lebai_driver package</description>
  <license>lebai</license>
  <maintainer email="liufang_robot@outlook.com">Liu Fang</maintainer>
  <author email="liufang_robot@outlook.com">Liu Fang</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>industrial_msgs</build_depend>  
  <build_depend>lebai_msgs</build_depend>
  <build_depend>grpc</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>industrial_msgs</run_depend>  
  <run_depend>lebai_msgs</run_depend>
  <run_depend>grpc</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>urdf</run_depend>  
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  
  

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
