<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lebai_driver</name>
  <version>0.0.1</version>
  <description>Lebai driver</description>
  <maintainer email="liufang_robot@outlook.com">ros</maintainer>
  <license>Apache 2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
