<?xml version="1.0"?>
<package format="3">
  <name>lebai_lm3_moveit_config</name>
  <version>0.0.1</version>
  <description>
    <p>
      MoveIt Resources for testing: Franka Emika Panda
    </p>
    <p>
      A project-internal configuration for testing in MoveIt.
    </p>
  </description>
  <author email="liufang_robot@outlook.com">liufang</author>
  <maintainer email="liufang_robot@outlook.com">liufang</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>backward_ros</depend>
  <exec_depend>lebai_lm3_support</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
