<?xml version="1.0"?>
<package>
  <name>lebai_msgs</name>
  <version>0.0.1</version>
  <description>The lebai_msgs package</description>
  <maintainer email="liufang_robot@outlook.com">Liu Fang</maintainer>
  <license>lebai</license>
  <author email="liufang_robot@outlook.com">Liu Fang</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>industrial_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>