<?xml version="1.0"?>
<package>
  <name>lebai_resources</name>
  <version>1.0.0</version>
  <description>The lebai_resources package</description>
  <maintainer email="liufang_robot@outlook.com">Liu Fang</maintainer>
  <license>BSD</license>
  <author email="liufang_robot@outlook.com">Liu Fang</author>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
