cmake_minimum_required(VERSION 3.8)
project(lebai_tutorials)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclpy REQUIRED)
find_package(rclcpp REQUIRED)
find_package(lebai_interfaces REQUIRED)

add_executable(move_example src/move_example.cc)
ament_target_dependencies(move_example
  rclcpp lebai_interfaces)

install(TARGETS
  move_example
  DESTINATION lib/${PROJECT_NAME})

install(PROGRAMS
  scripts/move_example.py
  scripts/io_example.py
  scripts/joint_state_subscriber.py
  DESTINATION lib/${PROJECT_NAME}
)


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  #set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
