<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lebai_tutorials</name>
  <version>0.0.1</version>
  <description>lebai ros sdk tutorials package</description>
  <maintainer email="liufang_robot@outlook.com">ros</maintainer>
  <license>Apache</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_cmake_python</buildtool_depend> -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>lebai_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
