<?xml version="1.0"?>
<package>
  <name>lebai_driver</name>
  <version>0.0.1</version>
  <description>The lebai_driver package</description>
  <license>lebai</license>
  <maintainer email="liufang_robot@outlook.com">Liu Fang</maintainer>
  <author email="liufang_robot@outlook.com">Liu Fang</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>industrial_robot_client</build_depend>
  <build_depend>lebai_msgs</build_depend>
  <run_depend>lebai_msgs</run_depend>
  <run_depend>industrial_robot_client</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
